--- a/playground/templates/hello.html
+++ b/playground/templates/hello.html
@@ -1,18 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<html>
+  <body>
     {% if name %}
-    <h1>Hello {{ name }} from Django Templates</h1>
-    {%else%}
-    <h1>Hello World from a Django Template</h1>
+    <h1>Hello {{ name }}</h1>
+    {% else %}
+    <h1>Hello World</h1>
     {% endif %}
-</body>
+  </body>
 </html>
-
-
